--- a/Week 1 Hands On Assignment - Plotly Challenge.ipynb
+++ b/Week 1 Hands On Assignment - Plotly Challenge.ipynb
@@ -6446,11 +6446,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px"
+    "# importing plotly express and numpy to utilize data\n",
+    "import plotly.express as px\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#%%\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Line Plot\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m fig1 \u001b[38;5;241m=\u001b[39m px\u001b[38;5;241m.\u001b[39mline(df, x\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSales\u001b[39m\u001b[38;5;124m'\u001b[39m, title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSales Over Time\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m fig1\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m#%%\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Bar Chart\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#%%\n",
+    "# Line Plot\n",
+    "fig1 = px.line(df, x='Date', y='Weekly_Sales', title='Sales Over Time')\n",
+    "fig1.show()\n",
+    "\n",
+    "#%%\n",
+    "# Bar Chart\n",
+    "fig2 = px.bar(df, x='Date', y='Weekly_Sales', title='Sales')\n",
+    "fig2.show()\n",
+    "\n",
+    "#%%\n",
+    "# Scatter Plot\n",
+    "fig3 = px.scatter(df, x='Date', y='Weekly_Sales', title='Sales Scatter Plot')\n",
+    "fig3.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%\n",
+    "# utilizing plotly graph objects\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "fig = go.Figure()"
    ]
   },
   {
@@ -6458,7 +6507,77 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#%%\n",
+    "# Line Plot\n",
+    "fig1 = go.Figure()\n",
+    "fig1.add_trace(go.Scatter(x=df['Date'], y=df['Weekly Sales'], mode='lines', name='Sales'))\n",
+    "fig1.update_layout(title='Sales Over Time')\n",
+    "fig1.show()\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       font=dict(family='Times New Roman', size=16, color='blue')\n",
+    "   )\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       title='My Customized Plot',\n",
+    "       xaxis_title='Date',\n",
+    "       yaxis_title='Weekly Sales'\n",
+    "   )\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       legend=dict(x=0.8, y=1)  # Position the legend\n",
+    "   )\n",
+    "\n",
+    "#%%\n",
+    "# Bar Chart\n",
+    "fig2 = go.Figure()\n",
+    "fig2.add_trace(go.Bar(x=df['Date'], y=df['Weekly Sales'], name='Sales'))\n",
+    "fig2.update_layout(title='Sales')\n",
+    "fig2.show()\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       font=dict(family='New York', size=14, color='purple')\n",
+    "       \n",
+    "       \n",
+    "   )\n",
+    "\n",
+    "fig.add_trace(\n",
+    "       go.Bar(\n",
+    "           x=[1, 2, 3], y=[4, 5, 6],\n",
+    "           marker_color='green',  # Change bar color\n",
+    "           text=['A', 'B', 'C'], textposition='auto'  # Add text labels\n",
+    "       )\n",
+    "   )\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       title='My Customized Plot',\n",
+    "       xaxis_title='Date',\n",
+    "       yaxis_title='Weekly Sales'\n",
+    "   )\n",
+    "\n",
+    "#%%\n",
+    "# Scatter Plot\n",
+    "fig3 = go.Figure()\n",
+    "fig3.add_trace(go.Scatter(x=df['Date'], y=df['Weekly Sales'], mode='markers', name='Sales'))\n",
+    "fig3.update_layout(title='Sales Scatter Plot')\n",
+    "fig3.show()\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       font=dict(family='Georgia', size=15, color='black')\n",
+    "   )\n",
+    "\n",
+    "fig.update_layout(template='plotly_dark')  # Use a built-in theme\n",
+    "\n",
+    "fig.update_layout(\n",
+    "       legend=dict(x=0.8, y=1)  # Position the legend\n",
+    "   )\n",
+    "\n",
+    "#despite the potential complexity of the different ways you can customize your graphs\n",
+    "#in plotly graph objects, I like this over plotly express\n",
+    "#there are some many different ways to customise how your data can be viewed\n",
+    "#there are an exponential number of ways to accomplish this"
+   ]
   }
  ],
  "metadata": {
@@ -6468,7 +6587,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
